Graphic Charts & Analytics Reports
Added Configurable Word Clouds
Added Compatible Trending Words Report